code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: open
---
 +------------------------------------------------------------------------------------------------+
 |                                              Code                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Overview-------------------------------------------------------------------------+---+
 |                                                                                            | x |
 |                                                                                            +---+
 | › ⌂ Model            Model: GPT-5.4 (Medium)                                                   |
 |   + Choose the language model used for new completions.                                        |
 |                                                                                                |
 |   ✶ Theme            Theme: Light - Photon (16-color) · Spinner: Diamond                       |
 |   + Switch between preset +----------------------------------------+                           |
 |                           |Settings Overview                       |                           |
 |   ⚙ Interface        Mode:|                                        |                           |
 |   + Control Settings UI ro|• ↑ ↓  Move between sections            |                           |
 |                           |• Enter  Open selected section          |                           |
 |   ❯ Shell            Shell|• Tab    Jump forward between sections  |                           |
 |   + Select the shell used |• Esc    Close settings                 |                           |
 |                           |• ?      Toggle this help               |                           |
 |   ▲ Shell escalation Disab|                                        |                           |
 |   + Configure zsh-fork she|Press Esc to close                      |locked subcommands).       |
 |                           +----------------------------------------+                           |
 |   ◈ Shell profiles   Active: auto                                                              |
 |   + Configure shell-style profiles (skills, references, MCP filters).                          |
 |                                                                                                |
 |   ⊘ Exec limits      PIDs: Auto · Mem: Auto                                                    |
 | ↑ ↓ navigate   Enter open   Esc close   ? help                                                 |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+
