code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_overlay_overview_layout.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +------------------------------------------------------------------------------------------------+
 |                                              Code                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Overview-------------------------------------------------------------------------+---+
 |                                                                                            | x |
 |                                                                                            +---+
 | › ⌂ Model            Model: GPT-5.4 (Medium)                                                   |
 |   + Choose the language model used for new completions.                                        |
 |                                                                                                |
 |   ✶ Theme            Theme: Light - Photon (16-color) · Spinner: Diamond                       |
 |   + Switch between preset color palettes and adjust contrast.                                  |
 |                                                                                                |
 |   ⚙ Interface        Mode: overlay · Icons: Unicode                                            |
 |   + Control Settings UI routing and other layout preferences.                                  |
 |                                                                                                |
 |   ❯ Shell            Shell: auto                                                               |
 |   + Select the shell used for tool execution.                                                  |
 |                                                                                                |
 |   ▲ Shell escalation Disabled                                                                  |
 |   + Configure zsh-fork shell escalation (interactive approvals for blocked subcommands).       |
 |                                                                                                |
 |   ◈ Shell profiles   Active: auto                                                              |
 |   + Configure shell-style profiles (skills, references, MCP filters).                          |
 |                                                                                                |
 |   ⊘ Exec limits      PIDs: Auto · Mem: Auto                                                    |
 | ↑ ↓ navigate   Enter open   Esc close   ? help                                                 |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+
