code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_overlay_overview_truncates.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +--------------------------------------------------------+
 |                          Code                          |
 +--------------------------------------------------------+
 +Settings ▸ Overview---------------------------------+---+
 |                                                    | x |
 |                                                    +---+
 | › ⌂ Model            Model: GPT-5.4 (Medium)           |
 |   + Choose the language model used for new comp...     |
 |                                                        |
 |   ✶ Theme            Theme: Light - Photon (16-colo... |
 |   + Switch between preset color palettes and ad...     |
 |                                                        |
 |   ⚙ Interface        Mode: overlay · Icons: Unicode    |
 |   + Control Settings UI routing and other layou...     |
 |                                                        |
 |   ❯ Shell            Shell: auto                       |
 |   + Select the shell used for tool execution.          |
 | ↑ ↓ navigate   Enter open   Esc close   ? help         |
 |                                                        |
 +--------------------------------------------------------+
